src/objects/Measurement__c.object
<CustomObject>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Measurements</relationshipLabel>
        <relationshipName>Measurements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Measurable__c</fullName>
        <label>Measurable</label>
        <referenceTo>Measurable__c</referenceTo>
        <relationshipLabel>Measurements</relationshipLabel>
        <relationshipName>Measurements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Measurement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>